Correzione esempio algoritmo Pollard

--- a/Appunti di Sicurezza delle Reti.lyx
+++ b/Appunti di Sicurezza delle Reti.lyx
@@ -11476,11 +11476,15 @@ noprefix "false"
 \begin_inset Formula 
 \[
 \begin{array}{ll}
-\cgm{b_{1}}2{11413},\:d_{1}=\mcd 1{11413}=1 & \cgm{b_{6}}{-309^{6}}{11413},\:d_{6}=\mcd{9992}{11413}=1\\
-\cgm{b_{2}}{2^{2}}{11413},\:d_{2}=\mcd 3{11413}=1 & \cgm{b_{7}}{9993^{7}}{11413},\:d_{7}=\mcd{5085}{11413}=1\\
-\cgm{b_{3}}{4^{3}}{11413},\:d_{3}=\mcd{63}{11413}=1 & \cgm{b_{8}}{5086^{8}}{11413},\:d_{8}=\mcd{-1017}{11413}=1\\
-\cgm{b_{4}}{64^{4}}{11413},\:d_{4}=\mcd{105}{11413}=1 & \cgm{b_{9}}{-1016^{9}}{11413},\:d_{9}=\mcd{5537}{11413}=\boxed{113}\\
-\cgm{b_{5}}{106^{5}}{11413},\:d_{5}=\mcd{-309}{11413}=1
+\cgm{b_{1}}2{11413}, & d_{1}=\mcd 1{11413}=1\\
+\cgm{b_{2}}{2^{2}}{11413}, & d_{2}=\mcd 3{11413}=1\\
+\cgm{b_{3}}{4^{3}}{11413}, & d_{3}=\mcd{63}{11413}=1\\
+\cgm{b_{4}}{64^{4}}{11413}, & d_{4}=\mcd{105}{11413}=1\\
+\cgm{b_{5}}{106^{5}}{11413}, & d_{5}=\mcd{-309}{11413}=1\\
+\cgm{b_{6}}{-309^{6}}{11413}, & d_{6}=\mcd{9992}{11413}=1\\
+\cgm{b_{7}}{9993^{7}}{11413}, & d_{7}=\mcd{5085}{11413}=1\\
+\cgm{b_{8}}{5086^{8}}{11413}, & d_{8}=\mcd{-1017}{11413}=1\\
+\cgm{b_{9}}{-1016^{9}}{11413}, & d_{9}=\mcd{5537}{11413}=\boxed{113}
 \end{array}
 \]
 
